
TESTS = reduced_gaussian2grids.py \
	reduced_gaussian2grids_sfc.py \
	reduced_latlon2grids.py \
	reduced_latlon2grids_sfc.py \
	regular_gaussian2grids.py \
	regular_gaussian2grids_sfc.py \
	regular_latlon2grids.py \
	regular_latlon2grids_sfc.py \
	regular_latlon_cell_centered2grid.py \
	sameAs.py \
	spectral2grids.py \
	spectral2grids_wind.py \
	spectral2spectral.py \
	spectral2spectral_wind.py

EXTRA_DIST = locations.py environment.py $(TESTS)

## Make sure these will be cleaned even when they're not built by
## default.
CLEANFILES = *.grib data_out/*.grib *.pyc
