[package]
name = "mir-sys"
version = "1.28.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "C++ bindings to ECMWF mir (Meteorological Interpolation and Regridding) library using cxx"
links = "mir_sys"
build = "build.rs"

[features]
default = ["vendored"]

# Build strategy (mutually exclusive)
vendored = [
    "eckit-sys/vendored",
    "eckit-sys/eckit-spec",
    "eckit-sys/eckit-geo",
    "eckit-sys/geo-codec-grids",
    "metkit-sys/vendored",
    "metkit-sys/grib",
    "eccodes-sys/vendored",
    "eccodes-sys/product-grib",
    "eccodes-sys/geography",
    "eccodes-sys/memfs",
    "eccodes-sys/eccodes-threads",
    "atlas-sys/vendored",
]
system = [
    "eckit-sys/system",
    "metkit-sys/system",
    "eccodes-sys/system",
    "atlas-sys/system",
]

[dependencies]
cxx.workspace = true
eckit-sys = { workspace = true, default-features = false }
metkit-sys = { workspace = true, default-features = false }
eccodes-sys = { workspace = true, default-features = false }
atlas-sys = { workspace = true, default-features = false }
bindman.workspace = true

[build-dependencies]
cxx-build.workspace = true
bindman-build.workspace = true
bindman-utils.workspace = true

[package.metadata.docs.rs]
